style.css
body{
	-webkit-font-smoothing: antialiased;
}

html{
	scroll-behavior: smooth;
}

*{
	font-family: 'Roboto Mono', monospace !important;
	color: #142D3D;
	font-size: 13px;
}

/*----------------------LINK STYLES-------------------------*/
a,
a:link{
	background-color: #142D3D;
	text-decoration: none;
	font-weight: bold;
	}
a:hover{
	background-color: #F1F080;
}
a:active,
a:visited,
a.social-link{
		background-color: transparent;
	}
a.social-link:hover{
		transform: translateY(-3px);
	}
a.nav-link{
	background-color: transparent;
	font-weight: bold;
	font-size: 0.8em;
	padding: 8px;
}
a.nav-link:hover{
	font-weight: bolder;
	background-color: #F1F080;
	font-size: 0.8em;
}
a.body-link{
	background-color: #F1F080;
}
a.body-link:hover{
	background-color: #142D3D;
	color: #FFFFFF;
}
a.menu-icon{
	background-color: transparent;
}

/*----------------------CONTENT STYLING-------------------------*/
.content{
	width: 50%;
	margin: auto;
}

.body-container{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin:auto;
	width:100%;
}

.date{
	display: flex;
	width: 60%;
	margin-top: 20%;
	padding: 16px 0;
	font-size: 0.8em;
	line-height: 16px;
	opacity: 70%;
	min-width: 268px;
}

.title{
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding: 16px 0;
	min-width: 268px;
}

.body-copy{
	padding: 48px 0;
	line-height: 24px;
	width: 40%;
	min-width: 268px;
}

.subtext{
	padding: 16px 0;
	font-size: 0.8em;
	line-height: 16px;
	width: 40%;
	min-width: 268px;
}

.disclaimer{
	padding-top: 16px;
	padding-bottom: 48px;
	font-size: 0.8em;
	line-height: 16px;
	width: 40%;
	min-width: 268px;
}

.copyright{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin:auto;
	width:100%;
	padding-top: 48px;
	padding-bottom: 300px;
	font-size: 0.8em;
	line-height: 16px;
}

/*----------------------HELLO-------------------------*/
.hello{
	display: flex;
	flex-direction: column;
	align-items: center;
	min-height: 100vh;
}

.hello-title{
	margin-top: 20%;
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding-bottom: 48px;
	min-width: 268px;
}

/*----------------------tl;dr-------------------------*/
.tldr{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin:auto;
	min-height: 100vh;
	width:100%;
}

.tldr-title{
	margin-top: 20%;
	width: 60%;
	font-size: 3em;
	font-weight: bolder;
	padding-bottom: 48px;
	min-width: 268px;
}

/*---------------------IMAGE STYLING-------------------------*/
.dx-img{
	max-width: 320px;
	width: 100%;
	height: auto;
	padding-top:50px;
	padding-bottom:50px;
}

.aviation-img{
	max-width: 320px;
	width: 100%;
	height: auto;
	padding-top:50px;
	padding-bottom:50px;
}

.dataviz-img{
	max-width: 320px;
	width: 100%;
	height: auto;
	padding-top:50px;
	padding-bottom:50px;
}

.vision-science-img{
	max-width: 320px;
	width: 100%;
	height: auto;
	padding-top:80px;
	padding-bottom:80px;
}

/*----------------------NAV-------------------------*/
.navigation{
	display: flex;
	flex-direction: column;
	align-items: center;
}

.nav{
	width: 60%;
	display: flex;
	flex-direction: row;
  justify-content: flex-start;
  padding: 16px 0;
	padding-right: 24px;
	margin-bottom: 40px;
	background-color: #FFFFFF;
	overflow: hidden;
	position: fixed;
	bottom: 0;
	height: 10px;
}

.ul{
	list-style-type: none;
	padding-left: 8px;
	padding-right: 8px;
}

.social-nav{
	display: flex;
  justify-content: space-between;
	align-items: center;
  padding: 16px 0;
	padding-right: 24px;
	padding-left: 24px;
	background-color: #142D3D;
	overflow: hidden;
	position: fixed;
	bottom: 0;
	width: 60%;
	height: 10px;
}

.social-group{
	display: flex;
	justify-content: flex-end;
}

.menu-icon{
	visibility: hidden;
}


/*----------------------------------RESPONSIVE-----------------------------------*/
/* Phones: Portrait and Landscape */
@media (max-width: 767px) {
		.social-nav{
			position:fixed;
			min-width: 320px;
			height: 32px;
			padding-right: 48px;
			padding-left: 48px;
			position: fixed;
			bottom: 0;
			overflow: hidden;
			z-index: 3;
		}

		.content{
			overflow: hidden;
			min-width: 268px;
			width: 100%;
		}

		.title{
			font-size: 2.5em;
		}

		a:link{
			font-weight: bolder;
			color: #142D3D;
			text-decoration: none;
			background-color: #F1F080;
			}

		a.menu-icon{
			visibility: visible;
			background-color: transparent;
		}

		a.social-link{
			background-color: transparent;
		}

		.nav{
			display: none;
		}

		.mobile-nav{
			display: none;
			position: fixed;
			font-size: 2.5em;
			line-height: 1.5em;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
			right: 0;
			bottom: 150;
			background-color: rgba(20,45,61,0.9);
			z-index: 2;
			cursor: pointer;
		}

	}

/* iPads */
@media only screen
	and (min-width: 768px)
  and (max-width: 1024px){
		a:link{
			font-weight: bolder;
			color: #142D3D;
			text-decoration: none;
			background-color: #F1F080;
			}

		.content{
			overflow: hidden;
			min-width: 268px;
			width: 100%;
		}

		.navigation{
				width: 100vw;
		}

		.social-nav{
			min-width: 320px;
			width: 100%;
			height: 32px;
			padding-right: 100px;
			padding-left: 100px;
			position: fixed;
			bottom: 0;
			overflow: hidden;
			z-index: 3;
		}

		a.menu-icon{
			visibility: visible;
			background-color: transparent;
		}

		a.social-link{
			background-color: transparent;
		}

		.nav{
			display: none;
		}

		.mobile-nav{
			display: none;
			position: fixed;
			font-size: 2.5em;
			line-height: 1.5em;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
			right: 0;
			bottom: 150;
			background-color: rgba(20,45,61,0.9);
			z-index: 2;
			cursor: pointer;
		}
	}

	/* ----------- iPad Pro ----------- */
	/* Portrait and Landscape */
	/*@media only screen
	  and (min-width: 1024px)
	  and (max-height: 1366px)
	  and (-webkit-min-device-pixel-ratio: 1.5){
			a:link{
				font-weight: bolder;
				color: #142D3D;
				text-decoration: none;
				background-color: #F1F080;
				}

			.content{
				overflow: hidden;
				min-width: 268px;
				width: 100%;
			}

			.navigation{
					width: 100vw;
			}

			.social-nav{
				min-width: 320px;
				width: 100%;
				height: 32px;
				padding-right: 100px;
				padding-left: 100px;
				position: fixed;
				bottom: 0;
				overflow: hidden;
			}

			a.menu-icon{
				visibility: visible;
				background-color: transparent;
			}

			a.social-link{
				background-color: transparent;
			}

			.nav{
				visibility: hidden;
			}
	}*/

